# ChangeLog for gnome-base/libglade
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/gnome-base/libglade/ChangeLog,v 1.140 2013/02/23 02:19:26 zmedico Exp $

  23 Feb 2013; Zac Medico <zmedico@gentoo.org> libglade-2.6.4.ebuild:
  Add ~arm-linux keyword.

  12 Sep 2012; Alexandre Rostovtsev <tetromino@gentoo.org>
  libglade-2.6.4.ebuild, +files/libglade-2.6.4-enable-extensions.patch:
  Enable prefix support; bug #430090, thanks to Christoph Junghans and Gilles
  Dartiguelongue.

  12 May 2012; Alexis Ballier <aballier@gentoo.org> libglade-2.6.4.ebuild:
  keyword ~amd64-fbsd

  05 May 2012; Jeff Horelick <jdhore@gentoo.org> libglade-2.6.4.ebuild:
  dev-util/pkgconfig -> virtual/pkgconfig

  30 Apr 2012; Justin Lecher <jlec@gentoo.org> libglade-2.6.4.ebuild,
  +files/libglade-2.6.4-gold-glib-2.32.patch, metadata.xml:
  Add fix for problems with glib-2.32 and gold linker, #414111

  29 Sep 2011; Pacho Ramos <pacho@gentoo.org> libglade-2.6.4.ebuild:
  Drop DEPRECATED flags, bug #384775 by Ian Abbott.

  22 Apr 2011; Gilles Dartiguelongue <eva@gentoo.org> libglade-2.6.4.ebuild:
  Ensure tests are run, bug #354631.

  10 Apr 2011; Samuli Suominen <ssuominen@gentoo.org> libglade-2.6.4.ebuild:
  USE="static-libs" and punt useless libtool file.

  27 Jan 2011; Pacho Ramos <pacho@gentoo.org> libglade-2.6.4.ebuild:
  Don't build tests when unneeded (bug #226227), bump to eapi3, set GCONF_DEBUG
  to proper value and update HOMEPAGE.

  08 Nov 2010; Gilles Dartiguelongue <eva@gentoo.org> libglade-2.6.4.ebuild:
  Fix support for python interpreter not being python 2, bug #313451. Pin
  glib and gtk+ to slot 2.

  11 Oct 2009; Mart Raudsepp <leio@gentoo.org> -libglade-2.6.3.ebuild:
  Remove old

  09 Oct 2009; Raúl Porcel <armin76@gentoo.org> libglade-2.6.4.ebuild:
  arm/ia64/sh/sparc stable wrt #280814

  15 Sep 2009; Jeroen Roovers <jer@gentoo.org> libglade-2.6.4.ebuild:
  Stable for HPPA (bug #280814).
