@@ -6,13 +6,26 @@ AUX libglade-2.6.3-fix_tests-page_size.patch 369 SHA256 97342a2d5bdf561d145950f5
 AUX libglade-2.6.4-enable-extensions.patch 225 SHA256 cd9ae2d1d915c08cf81533e5e4b283bdd04c04e45d1f6bc8e246c95fa51ebdf1 SHA512 e9cf514612790984110f9c5dc8fe12f5e2b4707ea469a803f0db24dc1ff7561411e6e47faafa71037e23daa1a21b1bc8ac7fc6e699508c76e9cb5b4cf8c10fde WHIRLPOOL f8ea8bc95f035872657d848e8a853f0237e6fb47329b21aaa99851c60f17caa6973c77a1d1c09fb4b79f231894f2015c5c9c8925dba1b570e1c0f7b1834190c9
 AUX libglade-2.6.4-gold-glib-2.32.patch 544 SHA256 daa5e196cf17b4f046dffdc7e04e108b155f78b3788763ef619d121eada6a819 SHA512 d2d77d6e4d2bfe426222231dbca29b6003d33e3964ea6ab25f2f2c11d3b52ed9d1379c5f5d727980ad16b6db8d7bab2dc540830e169b70ce24e9afd8c170a1d8 WHIRLPOOL 117d514b7b8787dd0b8ded72c92e4c82c39d4429dbcf041250835e566afcb3adb1dea4ffec6d55d05f2f3f10b3fb942a9e6c9b9ab42ca7af43179fb83f6b351d
 DIST libglade-2.6.4.tar.bz2 356119 SHA256 64361e7647839d36ed8336d992fd210d3e8139882269bed47dc4674980165dec SHA512 b725842febaf4c1f0d305a629ae1c61ea2de24dd6f41937e806c078fada2cea483195ef40f5238ce2045e47130c92559e984f677de667b840dd7fff0f8559735 WHIRLPOOL d416c3c0cb43c59b521abb3f0283061f2d7fae521980cafc95bc5d578b3ef551821f7d88ccf26b48de16f2568b29a1d5610d74ff7302363ea5a173ab189a5878
+EBUILD libglade-2.6.4-r1.ebuild 2649 SHA256 a88d0fd107881d61e5564e0bdbf5d77b7f2623e17af67e5e3209d0bae89c158a SHA512 3b8a4787ae1cb4e72ab4465300ada39afefa17ae1bb0b848712a59a6a8d954b7a6bc8ccbce3bc0245da44930526e39e6aadf5cbbc1f28d8bd706c3c5f0262494 WHIRLPOOL e5f7cec680fd4ec8df4d6670596b45a7472e1b325e1cd7200e354908bc43fa9d660548f6681bafa1d060ad4235a01c17bb8f7843ad22256295b9489e9b8a6917
 EBUILD libglade-2.6.4.ebuild 2492 SHA256 4dce2b8344a9da608ece5e6a8c0c0e54f69bf9640ef231fe6044bbdc61fa3222 SHA512 9a0d16610a743758b54259691af1269fdf3ae271f68094bf8754a36ad94f92a16db1e6f12aaedd6938503e688cdea8992fdeb3af19761a23c837e6bcd4295dcb WHIRLPOOL 2c216e54be788bef75d336984778cb8e1b1eb09901a23b9946d9c3aad03089d671903142b5207f72e4b8bd53b352c165031ba08cb3fb20d446bd24044cf636b7
-MISC ChangeLog 17115 SHA256 b9cb02869b2c6675cf63b6f187a7656f9b5d2d11f419d868cea5e682730d7841 SHA512 8fe2012f6432506f105fd233afe628dec7dc32a46254f8d042ff9ca7d004e07eac25b6928c203b9f4440364f7513258b595eb430b7ec52823950ea4320409112 WHIRLPOOL 5cf40da6bd1d6e029badee196be83987d852be8e2afef10eebe2cee6c2dc76180fa43be0e49d58081223b072c3a2d21bc79b93453f71582e6cc1135952480b72
+MISC ChangeLog 17270 SHA256 174b39648c6864f61d576aed8260ba033d5b82666988db7811f294be8548c354 SHA512 c6f6ba08386e6b641c4f6fe59d558f0158e193fb98dbb25e052faeda3bcacbd4df643cd49e63e7f37be7b8735bf247a6378b878a1e86af43c2c48fab0c0e214f WHIRLPOOL f3c6f7f12729a5303c6e32f38a3a0d12ace6846ed61419c4f6714584c88005deb2f9c68b2effc4d8d0ec72c8dab82dfe853a61758fa932c296865695ce1ebe91
 MISC metadata.xml 159 SHA256 b1ccd57b80d8d6ee7a9924844efd69830edfb744ab818d67e50a008b5aae7d4b SHA512 9408846d0f3194f62043b64e325aed9e8cce9a74b556865acf71facc3ad59a092dccbbb3c608ada40b73625eaac93a7bcc976858c6a47426bb8fadb6f830fe2b WHIRLPOOL 4700c8b71899b5acffcc46580315d4d116b478cfa283e0ea0569ab180e46850ce85d73c7370d989e53dd8aecb69ed843d2716bfebd3c5d74a7b5c3d4b94b96bb
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.19 (GNU/Linux)
+Version: GnuPG v2.0.22 (GNU/Linux)
 
-iEYEAREIAAYFAlEoJzAACgkQ/ejvha5XGaN6mACdGxzp09IPTKWUvfNHHM3NhbhC
-LbkAnAzH6LWoOOrBITBRb+yIJ5uQ/ukx
-=l+YF
+iQJ8BAEBCABmBQJTXNv3XxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
+ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXQ2REJCMDdDQzRGMERBRDA2RUEwQUZFNDFC
+MDdBMUFFQUVGQjQ0NjRFAAoJELB6GurvtEZOSYAQAMK6cKPQJvZ4ZAOZf5uBpJ3S
+9uHArwsavzskHOAU/eLoEIMLfdYxdT6/TUOE9Bwu51BEZONHo97xL34R3i+/plwq
+xE2i48CPGgJ4uptN8MCL3ZjgIjx7ssF+9chTdXxFBJtR4vEvqMZ4ABsTs6NxOORU
+a/rjj8rKtp2CYzJxWEP6uYUYOdQFEIIRy8mJB3wTxrqj7MbNpyUBUH+9sw3UL+j2
+GN0NXgm9CgZ+bNQp6d4zxNpBjDL++oUHdpsIpRobKMujww1V8tda5iuNE6M/+gEU
+EjD2TruuZxO+bN9sw7lPEeWhp8T5qUub2eGUnPmaRbtS+hOpP8l5Gjly2saRi9/r
+GP4tX5ZwpxofcDdIJb19uNkP1Fj4AfRlP5hMXoZwVU/T84UyPlEcQddxgh3zRhU1
+7rSD3Jnid/Jz/LvU994RBc3r7KW+CqlTdZCdPIOT5sIMkLAJUcqeQP6RDzJEN5N7
+ihqncScF9x5Zqb2L2mPYyfinvBguTFi5FTtZRzA6Q6+Em2Izrf7XGLwlM2kbWlL0
+4e0PXCu37v+gZwFUCgHkd9lh1SmxUtIAQgS66HEGCe8T8zFs5lMAabKiSoxB5ROV
+kYUrhz/+bpTHu4OhHdvPH7oddM0WRGR0EQ82RDesZQOEeCnFAaG42J1zqtPmNOAQ
+1qg/ClqwoaYXzJZhYaYP
+=3cce
 -----END PGP SIGNATURE-----
