@@ -1,6 +1,11 @@
 # ChangeLog for gnome-base/libglade
-# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/gnome-base/libglade/ChangeLog,v 1.140 2013/02/23 02:19:26 zmedico Exp $
+# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/gnome-base/libglade/ChangeLog,v 1.141 2014/04/27 10:29:05 mgorny Exp $
+
+*libglade-2.6.4-r1 (27 Apr 2014)
+
+  27 Apr 2014; Michał Górny <mgorny@gentoo.org> +libglade-2.6.4-r1.ebuild:
+  Convert to python-single-r1, bug #481288.
 
   23 Feb 2013; Zac Medico <zmedico@gentoo.org> libglade-2.6.4.ebuild:
   Add ~arm-linux keyword.
